--- a/_includes/photo.html
+++ b/_includes/photo.html
@@ -6,7 +6,7 @@
 	{% else %}
 	<img class="photo-img" src="{{ include.photo_url }}">
 	{% endif %}
-    {% if include.photo_position %}
+    {% if false %}
 	<a href="http://www.google.com/maps/place/{{include.photo_position}}">
 		<img class="photo-map" 			         			    src="https://maps.googleapis.com/maps/api/staticmap?center={{include.photo_position}}&scale=2&zoom=14&size=718x150&maptype=roadmap
 &markers=markers=color:red%7Clabel:%7C{{include.photo_position}}">
