--- a/css/main.scss
+++ b/css/main.scss
@@ -29,6 +29,8 @@ $content-width:    800px;
 $on-palm:          500px;
 $on-laptop:        800px;
 
+$max-width:		   1200px;
+
 
 
 // Using media queries with like this:
