--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -117,9 +117,9 @@
 }
 
 .page {
-  width: $content-width;
+  max-width: $content-width;
   margin-left: auto;
-  margin-right: auto;;
+  margin-right: auto;
 }
 
 /**
